--- a/seq.yaml
+++ b/seq.yaml
@@ -31,7 +31,7 @@ min_item_inter_num: 5
 #    timestamp: 1577714400
 
 # training settings
-epochs: 50 #训练的最大轮数
+epochs: 100 #训练的最大轮数
 train_batch_size: 256 #训练的batch_size
 learner: adam #使用的pytorch内置优化器
 learning_rate: 0.001 #学习率
@@ -40,7 +40,7 @@ eval_step: 1 #每次训练后做evalaution的次数
 stopping_step: 10 #控制训练收敛的步骤数，在该步骤数内若选取的评测标准没有什么变化，就可以提前停止了
 # evalution settings
 eval_setting: TO_LS,full #对数据按时间排序，设置留一法划分数据集，并使用全排序
-metrics: ["Recall", "MRR","NDCG","Precision"] #评测标准
+metrics: ["Recall", "MRR","NDCG","Precision", "Hit"] #评测标准
 valid_metric: MRR@10 #选取哪个评测标准作为作为提前停止训练的标准
 eval_batch_size: 256 #评测的batch_size
 weight_decay: 0
